Add exercicio 7 and 8 ferias java netBeans project no github

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
 /Banco/nbproject/private/
+/Banco/build/
+/ListaPessoas/nbproject/private/
+/ListaPessoas/build/
+/Predio/nbproject/private/
+/Predio/build/
+/Empresa/nbproject/private/
+/Empresa/build/
+/Veiculo/nbproject/private/
+/Ferias/nbproject/private/
+/Ferias/build/
+/Bolinha/nbproject/private/
